feat: document upload and management

--- a/app/app.css
+++ b/app/app.css
@@ -50,3 +50,10 @@ textarea,
 select {
   font-size: 16px;
 }
+
+button,
+[role="button"],
+a {
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+}
